# ds-aa-nga-flooding

./: .gitignore  README.md  _quarto.yml  databricks.yml  index.qmd  pyproject.toml  requirements.txt
.github/workflows/: deploy-app-cron.yml  deploy-app.yml  keep_awake.yml  main_nga-floodexposure-marimo(development).yml  main_nga-monitoring-marimo(development).yml  monitoring.yml
app/: app.js  index.html  monitoring_app.py  style.css
book_nga_flooding/: _quarto.yml
book_nga_flooding/docs/: index.html  intro.html  search.json
docs/: custom.css  index.html  intro.html  references.html  search.json  summary.html
docs/quarto_assets/: custom.css
exploration/: benue.md  codab_plot.md  comparison.ipynb  comparison.md  floodscan.md  fs_benue.md  fs_chirps.md  get_glofas.ipynb  glofas.md  glofas_new_reanalysis.md  glofas_prob.md  grrr_comparison.md  grrr_explore.ipynb  grrr_explore.md  grrr_inundation_history.ipynb  grrr_inundation_history.md  impact_comparison.md  impact_data.md  worldpop.md  wuroboki.md
exploration/2024/: bama.ipynb  bama.md  benue.md  (+16 more)
monitoring/: check_flooding.py  download_glofas.py  save_data.py
pipelines/: build_config_registry.py  build_floodscan_benchmark.py  build_trigger_config.py  check_flooding.py  check_forecasts.py  check_reforecast_skill.py  download_glofas_reforecast_country.py  export_app_data.py  process_glofas_reforecast_country.py  save_data.py  save_plots.py  send_emails.py  tune_trigger_gridsearch.py
quarto_assets/: cell-output-wrapper.html  custom.css
quarto_book/: _quarto.yml  custom.css  index.qmd
src/: constants.py
(+179 files in other folders)
