[project]
name = "ds-aa-nga-flooding"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "xarray",
    "numpy",
    "pandas",
    "zarr",
    "matplotlib",
    "fsspec",
    "gcsfs",
    "ocha-stratus",
    "folium",
    "cdsapi",
    "xlrd",
    "python-dotenv",
    "cfgrib",
    "marimo==0.13.11",
    "eccodes==2.42.0",
    "html2text==2025.4.15",
    "netcdf4>=1.7.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 79

[tool.isort]
profile = "black"
line_length = 79

# Language server configuration
[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_mypy = true           # Type checking with mypy (enabled by default, if installed)
enable_ruff = true           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes

# Diagnostics configuration
[tool.marimo.diagnostics]
enabled = true               # Show diagnostics in the editor
